Fixed layout on mobile
Background is now perfectly centered.

Page now scales properly, instead of using a fixed width.

Buttons, title, and contact info now adjust their appearance to suit smaller resolutions.

--- a/style.css
+++ b/style.css
@@ -13,12 +13,14 @@ img {
 
 #background {
   position: fixed;
-  left: 0px;
+  left: 50%;
+  transform: translateX(-50%);
   top: 0px;
   width: 100%;
   height: 100%;
   background-image: url("./images/background.png");
   background-size: cover;
+  background-position: 50% 50%;
   filter: blur(0px);
   z-index: -1;
   box-shadow: 0px 0px 500px -100px rgba(0,0,0,0) inset;
@@ -34,14 +36,11 @@ img {
 
 #card {
   position: relative;
-  margin: 0 auto;
+  margin: 5px auto;
   margin-top: 64px;
-
   background-color: #ffffff;
-  width: 480px;
+  max-width: 480px;
   min-height: 576px;
-  max-height: 1000%;
-  height: auto;
   border-radius: 6px;
   padding: 12px;
   padding-bottom: 32px;
@@ -57,7 +56,7 @@ img {
 }
 
 #avatar {
-  width: 220px;
+  max-width: 220px;
   border-radius: 100%;
   padding: 12px;
   margin: 24px;
@@ -174,10 +173,9 @@ img {
 }
 
 /* ==== Buttons ==== */
-
 #buttons {
   position: relative;
-  width: 480px;
+  max-width: 480px;
   font-size: 20px;
   padding-bottom: 48px;
 }
@@ -236,4 +234,23 @@ img {
   color: rgba(255,255,255,0.77);
   border-bottom-width: 0px;
   margin-top: 16px;
+}
+
+/* ==== Mobile Stuff ==== */
+@media only screen and (max-width: 450px) {
+  .button-icon {
+    display: none !important;
+  }
+  #title a {
+    font-size: 40px;
+    letter-spacing: -2px;
+  }
+  #title:first-letter, #title a span {
+    font-size: 60px;
+    letter-spacing: -2px;
+  }
+  #contact {
+    font-size: 13px;
+    letter-spacing: -0.5px;
+  }
 }
